<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titulo"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pistola"
            android:id="@+id/textView"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ibtnPistola"
            android:src="@drawable/pulsegun"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/pistolaboton"
            android:onClick="pistolaSimple"
            android:background="#fdfdfd"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/metralleta"
            android:id="@+id/textView3"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/balas"
            android:id="@+id/textView4"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:padding="5dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarDisparos"
            android:layout_marginLeft="2dp"
            android:max="4"
            android:paddingTop="10dp"
            android:progress="1"
            android:contentDescription="@string/balas" />

        <TextView
            android:id="@+id/textViewds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />


        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ibtnSoundPool"
            android:src="@drawable/gun"
            android:contentDescription="@string/metralletas"
            android:onClick="soundPoolPistola"
            android:background="#f6faf9" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/GrbGrupo1"
            android:elevation="10dp">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b1"
                    android:id="@+id/radioButton1"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:id="@+id/radioButton2"
                     />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:id="@+id/radioButton3"
                     />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:id="@+id/radioButton4"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    android:id="@+id/radioButton5"/>


        </RadioGroup>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pistolaRadio"
            android:id="@+id/button"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:elegantTextHeight="false"
            android:drawableBottom="@drawable/gun"
            android:onClick="soundPoolPistolaradio" />


    </LinearLayout>
</ScrollView>

</RelativeLayout>
